--- a/ASPNetUnitTesting/ASPNetUnitTesting.csproj
+++ b/ASPNetUnitTesting/ASPNetUnitTesting.csproj
@@ -53,6 +53,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IOHotelManagerTest.cs" />
